syntax = "proto3";

option csharp_namespace = "Common";

message CarUpdate {
  string carId = 1;
  string status = 2;
  string updatedField = 3;
  string newValue = 4;
}

message CarResponse {
  string message = 1;
}

service CarSync {
  rpc SyncUpdates (stream CarUpdate) returns (stream CarUpdate);
}
